More enchantment refactors